--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing = "20">
         <tr>
-            <td><img src="D:\Web Development\PP.png" alt="Ayush kumar's Image" width="200" height="200"></td>
+            <td><img src="PP.png" alt="Ayush kumar's Image" width="200" height="200"></td>
             <td>
                 <h1>AYUSH KUMAR</h1>
                 <p><em>Founder of <strong><a href="https://www.instagram.com/_campusthreads/">CampusThreads</a></strong></em></p>
